Move frontend files to /app and add landing page at root

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!doctype html><html lang="zh-CN"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"><title>Xboard</title><script type="module" crossorigin src="/assets/umi.js"></script></head><body><script src="./env.js"></script><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Occultum VPN</title>
+  <style>
+    body { font-family: Arial, sans-serif; text-align: center; padding-top: 20%; }
+    .login-btn { padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; }
+    .login-btn:hover { background-color: #0056b3; }
+  </style>
+</head>
+<body>
+  <h1>欢迎使用 Occultum VPN</h1>
+  <p>安全、高效的网络服务</p>
+  <a href="/app/" class="login-btn">登录</a>
+</body>
+</html>
