Update index.html with global-internet.webp background

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     body {
       font-family: 'Roboto', sans-serif;
-      background: url('https://example.com/world-map.jpg') no-repeat center center fixed;
+      background: url('/app/assets/images/global-internet.webp') no-repeat center center fixed;
       background-size: cover;
       margin: 0;
       padding: 0;
