--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <a href="/app/#/login" class="login-btn">登录</a>
   </div>
   <div class="intro">
-    <img src="/app/assets/images/about-us.jpg" alt="关于我们">
+    <img src="/app/assets/images/about-us.webp" alt="关于我们">
     <div class="text">
       <h3>关于我们</h3>
       <p>Occultum VPN 提供全球范围内的安全网络连接，支持多平台，随时随地畅享无忧上网。</p>
