Center inner elements in intro and features sections

--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
     .intro {
       max-width: 1440px; /* 外边框宽度限制为 1440px */
       margin: 20px auto;
-      padding: 80px;
+      padding: 10px;
       background-color: #fff;
       color: #000;
       border-radius: 5px;
     }
     .intro-inner {
-      max-width: 1200px; /* 内部元素宽度限制为 1200px */
-      margin: 0 auto; /* 居中 */
+      max-width: 1300px; /* 内部元素宽度限制为 1200px */
+      margin: 60px auto; /* 居中 */
       display: flex;
       align-items: center;
       gap: 60px;
     }
     .intro img {
-      max-width: 40%;
+      max-width: 50%;
       height: auto;
       border-radius: 5px;
     }
@@ -77,14 +77,14 @@
     .features {
       max-width: 1440px; /* 外边框宽度限制为 1440px */
       margin: 20px auto;
-      padding: 80px;
+      padding: 10px;
       background-color: #fff;
       color: #000;
       border-radius: 5px;
     }
     .features-inner {
-      max-width: 1200px; /* 内部元素宽度限制为 1200px */
-      margin: 0 auto; /* 居中 */
+      max-width: 1300px; /* 内部元素宽度限制为 1200px */
+      margin: 60px auto; /* 居中 */
     }
     .features-grid {
       display: grid;
