Change navbar background to transparent

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       z-index: -1;
     }
     .navbar {
-      background-color: #003087;
+      background-color: transparent; /* 背景颜色改为透明 */
       max-width: 1440px; /* 宽度限制为 1440px */
       margin: 25px auto; /* 上下外边距 25px，居中 */
       padding: 0 10px; /* 左右内边距 10px */
