Add homepage link to logo and adjust height to 40px

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 <body>
   <div class="navbar">
     <a href="https://shop.occultumvpn.com/" class="logo-link">
-      <img src="/app/assets/images/occultum-logo.webp'" alt="Occultum VPN Logo">
+      <img src="/app/assets/images/occultum-logo.webp" alt="Occultum Logo">
     </a>
     <div class="nav-links">
       <a href="/">首页</a>
