--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,39 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
-  <title>Xboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>Occultum VPN</title>
+  <script src="./env.js"></script> <!-- 确保 env.js 先加载 -->
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: url('/app/assets/images/global-internet.webp') no-repeat center center fixed;
+      background-size: cover;
+      margin: 0;
+      padding: 0;
+      position: relative;
+      min-height: 100vh;
+    }
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: inherit;
+      filter: blur(3px) brightness(0.8);
+      z-index: -1;
+    }
+    #app {
+      position: relative;
+      z-index: 1; /* 确保应用内容在模糊背景之上 */
+      min-height: 100vh; /* 防止内容被裁剪 */
+    }
+  </style>
   <script type="module" crossorigin src="/app/assets/umi.js"></script>
 </head>
 <body>
-  <script src="./env.js"></script>
   <div id="app"></div>
 </body>
 </html>
