--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Occultum</title>
+  <title></title>
   <script src="./env.js"></script> <!-- 确保 env.js 先加载 -->
   <style>
     body {
