--- a/app/index.html
+++ b/app/index.html
@@ -4,32 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title></title>
-  <script src="./env.js"></script> <!-- 确保 env.js 先加载 -->
+  <script src="./env.js"></script>
+  <link rel="stylesheet" href="/app/global.css">
   <style>
     body {
-      font-family: 'Roboto', sans-serif;
-      background: url('/app/assets/images/global-internet.webp') no-repeat center center fixed;
-      background-size: cover;
-      margin: 0;
-      padding: 0;
-      position: relative;
-      min-height: 100vh;
+      font-family: 'Roboto', sans-serif !important;
+      background: url('/app/assets/images/global-internet.webp') no-repeat center center fixed !important;
+      background-size: cover !important;
+      margin: 0 !important;
+      padding: 0 !important;
+      position: relative !important;
+      min-height: 100vh !important;
     }
     body::before {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: inherit;
-      filter: blur(3px) brightness(0.8);
-      z-index: -1;
+      content: '' !important;
+      position: fixed !important;
+      top: 0 !important;
+      left: 0 !important;
+      width: 100% !important;
+      height: 100% !important;
+      background: inherit !important;
+      filter: blur(3px) brightness(0.8) !important;
+      z-index: -1 !important;
     }
     #app {
-      position: relative;
-      z-index: 1; /* 确保应用内容在模糊背景之上 */
-      min-height: 100vh; /* 防止内容被裁剪 */
+      position: relative !important;
+      z-index: 1 !important;
+      min-height: 100vh !important;
     }
   </style>
   <script type="module" crossorigin src="/app/assets/umi.js"></script>
