Fix reCAPTCHA token submission and button binding

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title></title>
-  <script src="https://www.google.com/recaptcha/api.js?render=6Le6QviAAAAAL9a_LiHYFBm1rry20K5uB" async defer></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <script src="./env.js"></script>
   <link rel="stylesheet" href="/app/global.css">
   <style>
